--- a/demo1.html
+++ b/demo1.html
@@ -25,8 +25,8 @@
             </section>
 
             <section class="card">
-                <h2>Feature 2: Secure Data</h2>
-                <p>We prioritize your security with industry-leading encryption methods to keep your data safe.</p>
+                <h2>Name-Sanjay Chauhan</h2>
+                <p>We are the way for the cosmos to know itself.</p>
                 <a href="#" class="btn secondary">Get Started</a>
             </section>
         </div>
