--- a/demo1.html
+++ b/demo1.html
@@ -19,7 +19,7 @@
     <main>
         <div class="container">
             <section class="card">
-                <h2>Feature 1: Easy to Use</h2>
+                <h2>Feature 1: Easy</h2>
                 <p>Our platform is designed with simplicity in mind, ensuring a smooth experience for all users.</p>
                 <a href="#" class="btn primary">Learn More</a>
             </section>
