--- a/demo1.html
+++ b/demo1.html
@@ -20,9 +20,9 @@
         <div class="container">
             <section class="card">
                 <h2>Name - Dhinesh</h2>
-                <p>blahhhhhh,,,,,,,,,,,,,,meowmoew .</p>
-                <h2>Feature 1: Easy</h2>
-                <p>Our platform is designed with simplicity in mind, ensuring a smooth experience for all users.</p>
+                <p>blahhhhhh,,,,,,,,,,,,,,meowmoew fteiugbefiuvbrbv.</p>
+               
+                
                 <a href="#" class="btn primary">Learn More</a>
             </section>
 
